// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialogs Extension Area Edit Dialog can be closed 1`] = `
<div class="el-dialog__wrapper" name="dialog-fade" style="z-index: 2003;">
  <div role="dialog" aria-modal="true" aria-label="My Title" class="el-dialog" style="margin-top: 15vh; width: 70%;">
    <div class="el-dialog__header"><span class="el-dialog__title">My Title</span><button type="button" aria-label="Close" class="el-dialog__headerbtn"><i class="el-dialog__close el-icon el-icon-close"></i></button></div>
    <div class="el-dialog__body">
      <p>TODO Injection Mapping</p>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Dialogs Extension Area Edit Dialog can render 1`] = `
<div class="el-dialog__wrapper" name="dialog-fade" style="z-index: 2001;">
  <div role="dialog" aria-modal="true" aria-label="My Title" class="el-dialog" style="margin-top: 15vh; width: 70%;">
    <div class="el-dialog__header"><span class="el-dialog__title">My Title</span><button type="button" aria-label="Close" class="el-dialog__headerbtn"><i class="el-dialog__close el-icon el-icon-close"></i></button></div>
    <div class="el-dialog__body">
      <p>TODO Injection Mapping</p>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Dialogs Extension Area Edit Dialog displays a fallback if title is not given via route params 1`] = `
<div class="el-dialog__wrapper" name="dialog-fade" style="z-index: 2009;">
  <div role="dialog" aria-modal="true" aria-label="extension_area.title" class="el-dialog" style="margin-top: 15vh; width: 70%;">
    <div class="el-dialog__header"><span class="el-dialog__title">extension_area.title</span><button type="button" aria-label="Close" class="el-dialog__headerbtn"><i class="el-dialog__close el-icon el-icon-close"></i></button></div>
    <!---->
    <!---->
  </div>
</div>
`;
